Replaced some method calls specific to Java 1.5 (Officially we still support Java 1.4.2).